# safe_rustcl

./: Cargo.toml  Text File (1).txt  Text File (2).txt  Text File.txt  fig1.py  memtrace.csv  memtrace1026.csv  memtrace16386.csv  memtrace32770.csv  memtrace8194.csv  memtrace_raw1026.csv  memtrace_raw16386.csv  memtrace_raw32770.csv  memtrace_raw8194.csv  memtrace_raw_1026.csv  memtrace_raw_16386.csv  sample_mem.json
crates/hpc-core/: Cargo.toml  geiger_rep.txt  memtrace.csv  miri.txt
crates/hpc-core/benches/: hello_bench.rs  stencil_bench.rs  vec_add_bench.rs
crates/hpc-core/docs/: intern.txt
crates/hpc-core/examples/: bandwidth_basic.rs  bandwidth_optimized.rs  bandwidth_wrapper.rs  stencil.cl  stencil.rs  vec_add.rs
crates/hpc-core/src/: lib.rs  lib_alternative.rs  main.rs  memtracer.rs  metrics.rs
crates/hpc-core/tests/: state_miri.rs
paper/: table.tex
reports/: geiger.report.txt  geiger_c1.txt  geiger_c2.txt  geiger_d2.txt  zu geiger.txt
results/: Old Reports. README.txt
results/2025-07-28/stencil/: estimates.json  p.py  sample.json  stencil_memtrace.csv
results/2025-07-31/: memtrace1026.csv  memtrace8194.csv  metrics1026.txt  metrics16386.txt  metrics32770.txt  metrics8194.txt  metrics_raw1026.txt  metrics_raw16386.txt  metrics_raw32770.txt  metrics_raw8194.txt
results/2025-07-31/New Folder/: FI TABELLE.txt  README.md  memtrace16386.csv  memtrace_raw_32770.csv  memtrace_raw_8194.csv  sample_mem_raw.json  sample_met.json  sample_met_raw.json  sample_nf.json  sample_nf_raw.json  time.py
scripts/: add_vec_plot.py
(+26 files in other folders)
