[package]
name = "hpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1"
opencl3 = "0.7"
thiserror = "1"
bytemuck  = "1.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vec_add_bench"
harness = false

[[bench]]
name = "stencil_bench"
harness = false


[build]
rustflags = ["-Clink-arg=-Wl,-z,relro,-z,now"] # z.B. für reproducible builds



[features]
default = []
metrics = []
memtrace = []

[[example]]
name = "bandwidth_basic"
path = "examples/bandwidth_basic.rs"

[[example]]
name = "bandwidth_optimized" 
path = "examples/bandwidth_optimized.rs"